dashboard/ingress/http/apidashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-api-ingress
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
    expose: internal
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /api/
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
