dashboard/ingress/http/dashboard.internal.yaml
# ingress for the Traefik admin ui
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard-route-internal
  namespace: kube-system
  labels:
    k8s-traefik: traefik
    expose: internal
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip    
spec:
  rules:
    - http:
        paths:
        - path: /internal
          backend:
            serviceName: traefik-dashboard-internal
            servicePort: 443
