dashboard/ingress/http/grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-graphana-ingress
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
    expose: external
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip    
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: monitoring-grafana
          servicePort: 443
